# Secure-Computation-101

./: README.md  README_SNNI.md
ABY/: CMakeLists.txt  README.md  main.cpp
ABY/examples/argmax/: CMakeLists.txt  main.cpp  main_large.cpp
OTExtension/: README.md
OpenFHE/: CMakeLists.txt  README.md  main.cpp
OpenFHE/examples/cvector_pmatrix_multiplication/: CMakeLists.txt  halevi_soup.cpp  halevi_soup_test.cpp
OpenFHE/examples/herelu/: CMakeLists.txt  main.cpp
emp-sh2pc/test/: CMakeLists.txt
emp-toolkit/: README.md
emp-toolkit/emp_ot/: CMakeLists.txt  README.md  main.cpp
emp-toolkit/emp_ot_playaround/: CMakeLists.txt  README.md  main.cpp
emp-toolkit/emp_sh2pc/: CMakeLists.txt  README.md  millionaire.cpp
emp-toolkit/emp_sh2pc/examples/: CMakeLists.txt  millionaire.cpp
